--- a/work.html
+++ b/work.html
@@ -226,6 +226,13 @@ select{ position:absolute; left:400px; top:15px; font-size:20px; width:400px; }
 					<td class="ac">2022-03-17</td>
 					<td class="ac"></td>
 				</tr>
+				<tr class="m06">
+					<td></td>
+					<td>평가결과 - pc</td>
+					<td><a href="result/evaluation_p.html" target="_blank">result/evaluation_p.html</a></td>
+					<td class="ac">2022-03-17</td>
+					<td class="ac"></td>
+				</tr>
 				
 				<!-- 내정보 -->
 				<tr class="m07">
