--- a/work.html
+++ b/work.html
@@ -121,14 +121,14 @@ select{ position:absolute; left:400px; top:15px; font-size:20px; width:400px; }
 					<td></td>
 					<td>개인정보취급방침</td>
 					<td><a href="member/privacy.html" target="_blank">member/privacy.html</a></td>
-					<td class="ac"></td>
-					<td class="ac"></td>
+					<td class="ac">2022-03-30</td>
+					<td class="ac"></td>					
 				</tr>
 				<tr class="m03">
 					<td></td>
 					<td>이용안내</td>
 					<td><a href="member/provision.html" target="_blank">member/provision.html</a></td>
-					<td class="ac"></td>
+					<td class="ac">2022-03-30</td>
 					<td class="ac"></td>
 				</tr>
 
