--- a/member/findid.html
+++ b/member/findid.html
@@ -80,7 +80,7 @@
     </nav>
     
     <main class="main">
-        <section class="member">
+        <section class="member" id="member">
             <div class="tab_wrap">
                 <a href="#a" class="active">아이디 찾기</a>
                 <a href="#a">비밀번호 찾기</a>
