--- a/member/login.html
+++ b/member/login.html
@@ -80,7 +80,7 @@
     </nav>
     
     <main class="main">
-        <section class="member">
+        <section class="member" id="member">
             <div class="tab_wrap">
                 <a href="#a" class="active">로그인</a>
                 <a href="#a">회원가입</a>
