--- a/member/provision.html
+++ b/member/provision.html
@@ -82,18 +82,10 @@
     <main class="main">
         <section class="member" id="member">
             <div class="tab_wrap">
-                <a href="#a">아이디 찾기</a>
-                <a href="#a" class="active">비밀번호 찾기</a>
+                <a href="#a" class="active">개인정보취급방침</a>
+                <a href="#a">이용약관</a>
             </div>
-            <div class="form_wrap">
-                <div class="input_wrap">
-                    <input type="text" class="text ico_user" placeholder="교사·학부모 이름 입력">
-                    <input type="text" class="text ico_id" placeholder="아이디 입력">
-                    <input type="text" class="text ico_phone" placeholder="교사·학부모 휴대폰번호 입력">
-                </div>
-                <button class="btn_submit purple"><span>알림톡(SMS)으로 비밀번호 전송</span></button>
-                <button class="btn_submit gray"><span>로그인</span></button>
-            </div>
+            
         </section>
     </main>
     
