--- a/member/privacy.html
+++ b/member/privacy.html
@@ -105,7 +105,7 @@
                 </ol>                
 
                 <h2>2. 개인 정보의 수집 · 이용 목적</h2>
-                <p>수집한 개인정보를 다음의 목적을 위해 활용합니다.</p>
+                <p class="mb">수집한 개인정보를 다음의 목적을 위해 활용합니다.</p>
                 <ol class="num_list">
                     <li>회원제 서비스 이용을 위한 본인 확인 및 개인 식별</li>
                     <li>독서올림피아드 시험접수, 참가비 결제, 시험진행, 결과발표, 상장 배부</li>
@@ -114,7 +114,7 @@
                 </ol>
 
                 <h2>3. 개인 정보의 보유 및 이용기간</h2>
-                <p>이용자가 회원으로서 회사에 제공하는 서비스를 이용하는 동안에는 이용자의 개인정보를 보유 및 이용합니다. 다만, 회원 본인이 직접 삭제하거나 수정한 정보, 가입해지를 요청한 경우에는 정보를 완전히 삭제하며 추후 열람이나 이용이 불가능한 상태로 처리됩니다. </p>
+                <p class="mb">이용자가 회원으로서 회사에 제공하는 서비스를 이용하는 동안에는 이용자의 개인정보를 보유 및 이용합니다. 다만, 회원 본인이 직접 삭제하거나 수정한 정보, 가입해지를 요청한 경우에는 정보를 완전히 삭제하며 추후 열람이나 이용이 불가능한 상태로 처리됩니다. </p>
                 <ol class="num_list">
                     <li>회원가입 정보 : 결과발표 6개월 후 지체없이 파기</li>
                     <li>독서올림피아드 응시자 정보 및 시험결과 : 영구보관</li>
@@ -122,69 +122,92 @@
                 </ol>
 
                 <h2>4. 개인정보의 파기절차 및 방법</h2>
-                <p>회사는 원칙적으로 개인정보 수집 및 이용목적이 달성된 후에는 해당 정보를 지체없이 파기합니다.</p>
+                <p class="mb">회사는 원칙적으로 개인정보 수집 및 이용목적이 달성된 후에는 해당 정보를 지체없이 파기합니다.</p>
                 <ol class="num_list">
-                    <li>파기절차 : 회원이 회원가입 등을 위해 입력한 정보는 목적이 달성된 후 별도의 DB로 옮겨져(종이의 경우 별도의 서류함) 내부 방침 및 기타 관련 법령에 의한 정보보호 사유에 따라(보유 및 이용기간 참조) 일정 기간 저장된 후 파기됩니다. 별도 DB로 옮겨진 개인정보는 법률에 의한 경우가 아니고서는 보유 목적 이외의 다른 목적으로 이용되지 않습니다.</li>
+                    <li class="mb">파기절차 : 회원이 회원가입 등을 위해 입력한 정보는 목적이 달성된 후 별도의 DB로 옮겨져(종이의 경우 별도의 서류함) 내부 방침 및 기타 관련 법령에 의한 정보보호 사유에 따라(보유 및 이용기간 참조) 일정 기간 저장된 후 파기됩니다. 별도 DB로 옮겨진 개인정보는 법률에 의한 경우가 아니고서는 보유 목적 이외의 다른 목적으로 이용되지 않습니다.</li>
                     <li>파기방법 : 전자적 파일형태로 저장된 개인정보는 기록을 재생할 수 없는 기술적 방법을 사용하여 삭제합니다.</li>
                 </ol>
 
                 <h2>5. 이용자 본인의 개인정보 관리(열람, 정정, 삭제 등)에 관한 사항</h2>
-                <div>
-                    1) 회원님이 원하실 경우 언제라도 당사에서 개인정보를 열람하실 수 있으며 보관된 필수 정보를 수정하실 수 있습니다. <br>
-                    2) 회원의 개인정보 조회, 수정은 로그인 후 이용하실 수 있으며, 탈퇴를 원하는 경우에는 고객센터에 요청하시기 바랍니다.<br>
-                    3) 회원의 요청에 의해 해지 또는 삭제된 개인정보는 "회사가 수집하는 개인정보의 보유 및 이용기간"에 명시된 바에 따라 처리하고 그 외의 용도로 열람 또는 이용할 수 없도록 처리하고 있습니다.
-                </div>
+                <ol class="num_list">
+                    <li>회원님이 원하실 경우 언제라도 당사에서 개인정보를 열람하실 수 있으며 보관된 필수 정보를 수정하실 수 있습니다.</li>
+                    <li>회원의 개인정보 조회, 수정은 로그인 후 이용하실 수 있으며, 탈퇴를 원하는 경우에는 고객센터에 요청하시기 바랍니다.</li>
+                    <li>회원의 요청에 의해 해지 또는 삭제된 개인정보는 "회사가 수집하는 개인정보의 보유 및 이용기간"에 명시된 바에 따라 처리하고 그 외의 용도로 열람 또는 이용할 수 없도록 처리하고 있습니다.</li>
+                </ol>
 
                 <h2>6. 쿠키(cookie)의 운영에 관한 사항</h2>
-                <div>회사는 회원인증을 위하여 쿠키 방식을 이용하고 있습니다. 이는 로그아웃 시 자동으로 컴퓨터에 저장되지 않고 삭제되므로 공공장소나 타인이 사용할 수 있는 컴퓨터를 사용하실 경우에는 로그인 후 서비스 이용이 끝나시면 반드시 로그아웃 하시기 바랍니다.</div>
-                <div>쿠키 설정 방법 : 웹 브라우저 옵션에서 모든 쿠키를 허용하거나, 쿠키를 저장할 때마다 확인을 거치거나, 모든 쿠키의 저장을 거부할 수 있으나 쿠키 설치를 거부하였을 경우 서비스 제공이 제한될 수 있습니다.</div>
+                <p class="mb">회사는 회원인증을 위하여 쿠키 방식을 이용하고 있습니다. 이는 로그아웃 시 자동으로 컴퓨터에 저장되지 않고 삭제되므로 공공장소나 타인이 사용할 수 있는 컴퓨터를 사용하실 경우에는 로그인 후 서비스 이용이 끝나시면 반드시 로그아웃 하시기 바랍니다.</p>
+                <p>쿠키 설정 방법 : 웹 브라우저 옵션에서 모든 쿠키를 허용하거나, 쿠키를 저장할 때마다 확인을 거치거나, 모든 쿠키의 저장을 거부할 수 있으나 쿠키 설치를 거부하였을 경우 서비스 제공이 제한될 수 있습니다.</p>
 
                 <h2>7. 개인정보의 위탁처리</h2>
-                <div>회사는 서비스 이행을 위해 아래와 같이 외부 전문업체에 업무를 위탁하고 있습니다. 관계 법령에 따라 위탁계약 시 개인정보가 안전하게 관리될 수 있도록 필요한 사항을 규정하고 있습니다. 또한 공유하는 정보는 당해 목적을 달성하기 위하여 필요한 최소한의 정보에 국한됩니다.</div>
-                <div>
-                    1) 결제를 위한 정보 제공
-                    <p class="t1">위탁 대상자 : KG모빌리언스</p>
-                    <p class="t1">위탁업무 내용 : 참가비, 도서비에 대한 금융 결제 정보</p>
-                    <p class="t1">정보 보유 기간 : 서비스 제공 기간</p>
-                </div>
-                <div>
-                    2) 도서 입출고 관리를 위한 정보 제공
-                    <p class="t1"> 위탁 대상자 : 수인당</p>
-                    <p class="t1"> 위탁업무 내용 : 독서올림피아드 필독서 입출고 관리 업무 대행</p>
-                    <p class="t1"> 제공 항목 : 이름, 전화번호, 주소, 구매내역</p>
-                    <p class="t1"> 정보 보유 기간 : 서비스 제공 기간</p>
-                </div>
-                <div>
-                    3) 도서 배송을 위한 정보 제공
-                    <p class="t1">위탁 대상자 : 한진택배</p>
-                    <p class="t1">위탁업무 내용 : 독서올림피아드 필독서 배송 및 회수</p>
-                    <p class="t1">제공 항목 : 이름, 전화번호, 주소</p>
-                    <p class="t1">정보 보유 기간 : 5년</p>
-                </div>
-                <div>
-                    4) 회원에게 상품권 증정을 위한 정보 제공
-                    <p class="t1">위탁 대상자 : ㈜한국페이즈서비스</p>
-                    <p class="t1">위탁업무 내용 : 모바일 상품권 전송</p>
-                    <p class="t1">제공 항목 : 전화번호</p>
-                    <p class="t1">정보 보유 기간 : 서비스 제공 기간</p>
-                </div>
-                <div>
-                    5) 온라인 시험솔루션 이용을 위한 정보 제공
-                    <p class="t1">위탁 대상자 : ㈜아이오시스</p>
-                    <p class="t1">위탁업무 내용 : 온라인 시험솔루션을 이용해 시험 진행, 채점</p>
-                    <p class="t1">제공 항목 : 응시자명, 학년, 학교명, 응시번호</p>
-                    <p class="t1">정보 보유 기간 : 서비스 제공 기간</p>
-                </div>
-                <div>
-                    6) 입상자 상장 배부를 위한 정보 제공
-                    <p class="t1">위탁 대상자 : 한우리열린교육 지역센터</p>
-                    <p class="t1">위탁업무 내용 : 입상자 상장 전달</p>
-                    <p class="t1">제공 항목 : 응시자명, 학년, 학교명, 응시번호, 입상내역, 연락처, 주소</p>
-                    <p class="t1">정보 보유 기간 : 서비스 제공 기간</p>                  
-                </div>
+                <p class="mb">회사는 서비스 이행을 위해 아래와 같이 외부 전문업체에 업무를 위탁하고 있습니다. 관계 법령에 따라 위탁계약 시 개인정보가 안전하게 관리될 수 있도록 필요한 사항을 규정하고 있습니다. 또한 공유하는 정보는 당해 목적을 달성하기 위하여 필요한 최소한의 정보에 국한됩니다.</p>
+                <ol class="num_list">
+                    <li class="mb">결제를 위한 정보 제공
+                        <p class="t1">위탁 대상자 : KG모빌리언스</p>
+                        <p class="t1">위탁업무 내용 : 참가비, 도서비에 대한 금융 결제 정보</p>
+                        <p class="t1">정보 보유 기간 : 서비스 제공 기간</p>
+                    </li>
+                    <li class="mb">도서 입출고 관리를 위한 정보 제공
+                        <p class="t1"> 위탁 대상자 : 수인당</p>
+                        <p class="t1"> 위탁업무 내용 : 독서올림피아드 필독서 입출고 관리 업무 대행</p>
+                        <p class="t1"> 제공 항목 : 이름, 전화번호, 주소, 구매내역</p>
+                        <p class="t1"> 정보 보유 기간 : 서비스 제공 기간</p>
+                    </li>
+                    <li class="mb">도서 배송을 위한 정보 제공
+                        <p class="t1">위탁 대상자 : 한진택배</p>
+                        <p class="t1">위탁업무 내용 : 독서올림피아드 필독서 배송 및 회수</p>
+                        <p class="t1">제공 항목 : 이름, 전화번호, 주소</p>
+                        <p class="t1">정보 보유 기간 : 5년</p>
+                    </li>
+                    <li class="mb">회원에게 상품권 증정을 위한 정보 제공
+                        <p class="t1">위탁 대상자 : ㈜한국페이즈서비스</p>
+                        <p class="t1">위탁업무 내용 : 모바일 상품권 전송</p>
+                        <p class="t1">제공 항목 : 전화번호</p>
+                        <p class="t1">정보 보유 기간 : 서비스 제공 기간</p>
+                    </li>
+                    <li class="mb">온라인 시험솔루션 이용을 위한 정보 제공
+                        <p class="t1">위탁 대상자 : ㈜아이오시스</p>
+                        <p class="t1">위탁업무 내용 : 온라인 시험솔루션을 이용해 시험 진행, 채점</p>
+                        <p class="t1">제공 항목 : 응시자명, 학년, 학교명, 응시번호</p>
+                        <p class="t1">정보 보유 기간 : 서비스 제공 기간</p>
+                    </li>
+                    <li>입상자 상장 배부를 위한 정보 제공
+                        <p class="t1">위탁 대상자 : 한우리열린교육 지역센터</p>
+                        <p class="t1">위탁업무 내용 : 입상자 상장 전달</p>
+                        <p class="t1">제공 항목 : 응시자명, 학년, 학교명, 응시번호, 입상내역, 연락처, 주소</p>
+                        <p class="t1">정보 보유 기간 : 서비스 제공 기간</p>
+                    </li>              
+                </ol>
 
                 <h2>8. 개인정보에 관한 민원서비스</h2>
-                <div>회사는 고객의 개인정보를 보호하고 개인정보와 관련한 불만을 처리하기 위하여 아래와 같이 개인정보관리책임자 및 관련 부서를 지정하고 있습니다.</div>
+                <p class="mb">회사는 고객의 개인정보를 보호하고 개인정보와 관련한 불만을 처리하기 위하여 아래와 같이 개인정보관리책임자 및 관련 부서를 지정하고 있습니다.</p>
+                <p class="mb">
+                    개인정보관리책임자 : 이재필 <br>
+                    전화번호 : 02-6276-2604 <br>
+                    메일 : reading@hanuribook.or.kr
+                </p>
+                <p class="mb">
+                    고객서비스 담당 부서 : 독서진흥팀<br>
+                    전화번호 : 02-6276-2604<br>
+                    메일 : reading@hanuribook.or.kr
+                </p>
+
+                <p class="mb">귀하께서는 회사의 서비스를 이용하시며 발생하는 모든 개인정보보호 관련 민원을 개인정보관리책임자 혹은 담당부서로 신고하실 수 있습니다. 회사는 이용자들의 신고사항에 대해 신속하게 충분한 답변을 드릴 것입니다. 기타 개인정보침해에 대한 신고나 상담이 필요하신 경우에는 아래 기관에 문의하시기 바랍니다.</p>
+
+                <p>
+                    개인정보분쟁조정위원회 (http://kopico.go.kr / 02-405-5150) <br>
+                    한국인터넷진흥원 (www.kisa.or.kr / 118)<br>
+                    정보보호마크인증위원회 (www.eprivacy.or.kr / 02-550-9531~2)<br>
+                    경찰청 사이버안전국 (http://cyberbureau.police.go.kr / 182)
+                </p>
+
+                <h2>부칙</h2>
+                <p class="mb">[시행일] 본 개인정보처리방침은 2022년 4월 18일부터 적용됩니다.</p>
+                <ul class="dot_list">
+                    <li>최초 공고일 : 2015년 3월 1일</li>
+                    <li>변경 공고일 : 2021년 3월 1일 (<a href="#a">이전 방침 보기</a>)</li>
+                    <li>변경 공고일 : 2022년 4월 4일</li>
+                </ul>
             </article>
         </section>
     </main>
