--- a/member/provision.html
+++ b/member/provision.html
@@ -82,10 +82,160 @@
     <main class="main">
         <section class="member" id="member">
             <div class="tab_wrap">
-                <a href="#a" class="active">개인정보취급방침</a>
-                <a href="#a">이용약관</a>
+                <a href="#a">개인정보취급방침</a>
+                <a href="#a" class="active">이용약관</a>
             </div>
             
+            <article class="privacy">
+                <h2>제1장 총칙</h2>
+                <h3>제1조(목적)</h3>
+                <p class="mb">이 약관은 (사)한우리독서문화운동본부(이하 ‘회사’)가 제공하는 독서올림피아드 사이트(이하 '서비스')의 이용조건 및 절차에 관한 사항을 규정함을 목적으로 합니다.</p>
+                <h3>제2조(약관 외 적용범위)</h3>
+                <ol class="num_list">
+                    <li>이 약관은 회사가 제공하는 서비스 이용에 관한 안내(이하 '서비스 이용안내')와 함께 적용합니다.</li>
+                    <li>이 약관에 명시되지 않은 사항에 대해서는 관계법령 및 서비스 이용안내에 따릅니다.</li>
+                </ol>
+
+                <h2>제2장 이용계약</h2>
+                <h3>제3조(회원의 정의)</h3>
+                <p class="mb"> '회원'이라 함은 서비스를 제공받기 위해 회사가 인정하는 절차를 통해 가입하여 이용자번호(ID)를 부여 받은 자를 말합니다.</p>
+                <h3>제4조(이용계약의 성립)</h3>
+                <ol class="num_list type2">
+                    <li>이용계약은 본 약관에 동의한 고객이 회사 소정의 이용신청서를 온라인 또는 회사가 정하는 방법으로 신청, 회사의 승낙에 의하여 성립합니다. 이용계약은 이용자번호(ID) 단위로 체결됩니다.</li>
+                    <li>제 1 항의 규정에 의해 고객이 이용신청을 할 때에는 회사가 정한 필수입력 사항을 입력하여야 합니다.</li>
+                    <li>
+                        회사는 고객의 이용신청이 다음 각 호에 해당하는 경우 그 신청에 대한 승낙을 제한 또는 유보할 수 있습니다.
+                        <ol class="kor_list">
+                            <li>성명이 실명이 아닐 경우</li>
+                            <li>선량한 풍속, 기타 사회질서를 해할 목적으로 신청했을 경우</li>
+                            <li>이용신청서의 내용을 허위로 기재하였거나 허위서류를 첨부하였을 경우</li>
+                            <li>회사의 업무수행상 또는 기술상 지장이 있는 경우</li>
+                            <li>기타 이용신청고객의 귀책사유로 이용승낙이 곤란한 경우</li>
+                        </ol>
+                    </li>
+                </ol>
+                <h3>제5조(약관의 동의)</h3>
+                <p>회원이 등록 및 동의절차를 거쳐 가입 버튼을 누름으로써 본 약관에 동의한 것으로 간주합니다.</p>
+
+                <h2>제3장 계약당사자의 의무</h2>
+                <h3>제6조(회사의 의무)</h3>
+                <ol class="num_list type2 mb">
+                    <li>회사는 법령 및 본 약관에서 금하는 행위를 하지 않으며, 지속적이고 안정적으로 서비스를 제공하기 위해서 노력합니다.</li>
+                    <li>회사는 서비스 제공과 관련해 알고 있는 회원의 개인정보를 본인의 승낙없이 제3자에게 누설하거나 배포하지 않습니다. 단, 법률에 의한 국가기관의 요구나 수사상의 목적, 개인을 식별할 수 없는 인구통계 학적 자료로는 제공될 수 있습니다.</li>
+                    <li>회사는 회원이 제기하는 의견이나 불만이 정당하다고 인정되면 즉시 처리합니다. 다만, 즉시 처리가 곤란할 경우에는 회원에게 그 사유와 일정을 통보하여야 합니다.</li>
+                    <li>회사는 회원이 안전하게 서비스를 이용할 수 있도록 회원의 개인정보 및 신용정보 보호를 위한 보안시스템을 구축합니다.</li>
+                    <li>회사는 지속적이고 안정적인 서비스를 제공하기 위하여 설비에 장애가 있거나 망실된 때에는 이를 지체없이 수리 또는 복구합니다. 다만, 천재지변이나 비상사태, 기타 부득이한 경우에는 그 서비스를 일시 중단하거나 중지할 수 있습니다. 이때, 회사는 지체없이 회원에게 통보하여야 합니다.</li>
+                </ol>
+                <h3>제7조(회원의 의무)</h3>
+                <ol class="num_list type2">
+                    <li>회원 가입시에 입력하는 회원의 정보는 정확해야 합니다. 또한, 이미 제공된 회원정보가 정확한 정보가 되도록 유지, 갱신하여야 합니다.</li>
+                    <li>
+                        회원은 공공의 안녕질서 및 미풍양속을 저해하는 다음 각 호의 통신 활동을 하여서는 안됩니다.
+                        <ol class="kor_list">
+                            <li>범죄행위를 목적으로 하거나 범죄행위를 교사하는 내용</li>
+                            <li>선량한 풍속, 기타 사회질서를 해하는 내용</li>
+                            <li>타인의 명예를 손상시키거나 불이익을 주는 행위</li>
+                            <li>타인의 이용자번호(ID) 및 비밀번호를 사용하는 행위</li>
+                            <li>다른 회원 또는 제3자의 지적재산권을 침해하는 행위</li>
+                            <li>정보통신설비의 오동작이나 정보 등의 파괴 및 혼란을 유발시키는 컴퓨터 바이러스, 바이러스 감염자료를 등록 또는 유포하는 행위</li>
+                            <li>회사의 승인을 받지 않은 광고, 판촉물, 스팸메일, 피라미드 조직, 기타 다른 형태의 권유를 게시, 게재 또는 전송하는 경우</li>
+                            <li>서비스를 통하여 얻은 정보를 회사의 사전 승락없이 복제 또는 유통시키거나 상업적으로 이용하는 경우</li>
+                            <li>기타 법령에 위배되는 행위</li>
+                        </ol>
+                    </li>
+                    <li>이용자번호(ID)와 비밀번호(6자 이상, 영/숫자 혼용, 단순문자 또는 개인정보 사용금지)의 관리책임은 회원 본인에게 있으며, 비밀번호가 타인에게 노출된 경우 즉시 변경하여야 합니다. 회원에게 부여된 이용자번호(ID)와 비밀번호의 관리 소홀, 부정사용에 의하여 발생하는 모든 결과에 대한 책임은 회원에게 있습니다.</li>
+                    <li>본인의 이용자번호(ID)가 부정하게 사용된 경우, 회원은 반드시 회사에 그 사실을 통보해야 합니다.</li>
+                    <li>회원은 이 약관 및 관계법령을 준수하여야 합니다. 회사는 회원이 상기 제 조항을 위반했을 경우 즉시 계약해지 및 이용제한을 할 수 있고 이로 인한 손해배상을 청구할 수 있습니다.</li>
+                </ol>
+
+                <h2>제4장 서비스의 이용</h2>
+                <h3>제8조(정보의 제공)</h3>
+                <p class="mb">회사는 회원이 서비스 이용에 필요하다고 인정되는 다양한 정보를 문자, 알림톡 등의 방법으로 회원에게 제공할 수 있으며, 회원은 수신거부 의사를 밝힘으로써 정보수신을 거부할 수 있습니다.</p>
+                <h3>제9조(게시물 삭제)</h3>
+                <p class="mb">회사는 회원이 게시하거나 제공하는 서비스 내용이 다음 각 호에 해당한다고 판단될 경우 사전 통지없이 삭제할 수 있습니다.</p>
+                <ol class="num_list type2 mb">
+                    <li>다른 회원 또는 제3자를 비방하거나 명예를 손상시키는 내용인 경우</li>
+                    <li>허위 사실의 유포</li>
+                    <li>공공질서 및 미풍양속에 위반되는 경우</li>
+                    <li>지적재산권 등 기타 타인의 권리를 침해하는 내용인 경우</li>
+                    <li>회사의 서비스 내용과 합치하지 않는 경우</li>
+                    <li>기타 관계법령에 위반된다고 판단되는 경우</li>
+                </ol>
+                <h3>제10조(서비스 이용시간)</h3>
+                <ol class="num_list type2 mb">
+                    <li>서비스 운영은 회사의 업무상 또는 기술상 문제가 없는 한 연중무휴 1일 24시간을 원칙으로 합니다. 다만, 정기 점검 등의 필요로 회사가 정한 시간은 그러하지 아니하며 사전에 공지합니다. </li>
+                    <li>회사는 일부 서비스의 이용가능 시간을 별도로 정할 수 있습니다. 이 경우 서비스 이용안내를 통해 공지합니다.</li>
+                </ol>
+                <h3>제11조(서비스 제공 중지)</h3>
+                <ol class="num_list type2">
+                    <li>
+                        회사는 다음 각 호에 해당하는 경우 서비스 제공을 중지할 수 있습니다.
+                        <ol class="kor_list">
+                            <li>서비스 설비의 증설, 보수 등 공사로 인한 경우</li>
+                            <li>전기통신사업법에 규정된 기간통신사업자가 전기통신 서비스를 중지했을 경우</li>
+                            <li>기타 불가항력적인 경우</li>
+                        </ol>
+                    </li>
+                    <li>천재지변, 국가비상사태 등의 불가항력적인 경우를 제외하고는 서비스 제공 중지 전에 회원에게 공지합니다.</li>
+                </ol>
+
+                <h2>제5장 계약해지 및 이용제한</h2>
+                <h3>제12조(계약해지 및 이용제한)</h3>
+                <ol class="num_list type2">
+                    <li>서비스 탈퇴를 원할 경우 회원 본인이 02-6276-2604로 요청해 주시기 바랍니다.</li>
+                    <li>탈퇴 신청 시 본인 확인 후 가입을 해지합니다. 탈퇴 또는 이용 제한 후 6개월 동안 회원 정보를 보유하며, 6개월이 경과하면 자동으로 파기합니다. 단, 6개월 이내라도 즉시 파기할 것을 요구할 경우에는 지체 없이 파괴합니다.</li>
+                    <li>
+                        회사는 회원이 다음 각 호에 해당하는 행위를 했을 경우 사전통지 없이 이용계약을 해지하거나 서비스 이용을 제한할 수 있습니다.
+                        <ol class="kor_list">
+                            <li>회사의 서비스 운영을 고의로 방해한 경우</li>
+                            <li>타인의 이용자번호(ID) 및 비밀번호를 도용한 경우</li>
+                            <li>공공질서 및 미풍양속에 저해되는 내용을 유포시킨 경우</li>
+                            <li>회원 가입시 허위 내용을 사용하여 신청하였을 경우</li>
+                            <li>타인의 명예를 손상시키거나 불이익을 주는 행위를 했을 경우</li>
+                            <li>컴퓨터 바이러스 프로그램 등을 유포하는 경우</li>
+                            <li>기타 법률에 위반되는 행위를 할 경우</li>
+                        </ol>
+                    </li>
+                </ol>
+
+                <h2>제6장 개인정보보호</h2>
+                <h3>제13조(개인정보보호정책)</h3>
+                <p>회사는 회원이 가입시 기재한 개인정보 및 서비스를 제공하면서 획득한 금융거래정보 등의 내용을 보호하기 위해 노력합니다. 회원의 개인정보보호에 관하여는 회사의 '개인정보보호정책' 및 관련법령이 정한 바에 의합니다.</p>
+
+                <h2>제7장 손해 배상</h2>
+                <h3>제14조 (손해 배상)</h3>
+                <p class="mb">회사는 회원의 부주의로 발생한 어떠한 손해에 관하여도 책임을 지지 않습니다.</p>
+                <h3>제15조(면책)</h3>
+                <ol class="num_list type2">
+                    <li>회사는 회원이 서비스를 이용하여 기대하는 이익을 얻지 못하였거나 서비스 자료에 대한 이용으로 발생하는 손해에 대해서는 책임을 지지 않습니다.</li>
+                    <li>회사는 회원의 귀책사유로 인한 서비스 이용의 장애에 대하여 책임을 지지 않습니다.</li>
+                    <li>회사는 천재지변 등의 불가항력으로 인해 서비스를 제공할 수 없는 경우에는 서비스 제공에 대한 책임을 지지 않습니다.</li>
+                    <li>회사는 모든 서비스의 자료 보관 및 전송에 관한 책임이 없으며 자료의 손실이 있는 경우에도 책임을 지지 않습니다.</li>
+                    <li>회사는 제휴사이트가 전송 · 제공한 자료의 신뢰도, 정확성 등 내용에 관하여는 책임을 지지 않습니다.</li>
+                </ol>
+
+                <h2>제8장 지적재산권</h2>
+                <h3>제16조(지적재산권)</h3>
+                <ol class="num_list type2">
+                    <li>회사가 지적재산권을 가지고 있는 자료, 서비스, 소프트웨어, 상표 등을 회사의 서면동의 없이 전부 또는 일부를 수정, 대여, 대출, 배포, 제작, 양도, 재라이센스, 담보권 설정, 상업적 이용 행위 등을 할 수  없습니다.</li>
+                    <li>서비스 이용 후 회원이 게시한 후기 등의 저작권은 회사에 있습니다. 회사는 이를 독서올림피아드의 안내 및 홍보에 사용할 수 있습니다. 단, 개인정보가 포함된 내용의 경우 회사는 회원의 동의 없이 이용할 수 없습니다.</li>
+                </ol>
+
+                <h2>제9장 관할법원</h2>
+                <h3>제17조(관할법원)</h3>
+                <ol class="num_list type2">
+                    <li>서비스와 관련되어 분쟁이 발생할 경우, 회사의 본사 소재지를 관할하는 법원을 관할법원으로 합니다.</li>
+                    <li>제휴사이트는 해당 사이트의 약관에 따릅니다.</li>
+                </ol>
+
+                <h2>부칙</h2>                
+                <p class="mb">[시행일] 본 약관은 2022년 4월 18일부터 적용됩니다.</p>
+                <ul class="dot_list">
+                    <li>최초 공고일 : 2015년 3월 1일</li>
+                    <li>변경 공고일 : 2021년 3월 1일 (<a href="#a">이전 방침 보기</a>)</li>
+                    <li>변경 공고일 : 2022년 4월 4일</li>
+                </ul>
+            </article>
         </section>
     </main>
     
