--- a/result/evaluation_p.html
+++ b/result/evaluation_p.html
@@ -337,5 +337,6 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.5.0/Chart.min.js"></script>
 <script src="https://html2canvas.hertzen.com/dist/html2canvas.min.js"></script>    
 <script defer src="../assets/js/ui.js"></script>
+<script defer src="../assets/js/oresult_chart.js"></script>
 </body>
 </html>
