--- a/book/books1.html
+++ b/book/books1.html
@@ -172,47 +172,115 @@
                     </li>
                 </ul>
             </div>
-
+            <div class="cont_wrap">
+                <h2>설문</h2>
+                <div class="survey_wrap">
+                    <p class="q">Q.독서올림피아드를 어떻게 알게 되셨나요?</p>
+                    <div>
+                        <button class="btn_survey">현수막</button>
+                        <button class="btn_survey">포스터·전단</button>
+                        <button class="btn_survey">신문광고</button>
+                        <button class="btn_survey">지인</button>
+                        <button class="btn_survey">한우리교사·센터 추천</button>
+                        <button class="btn_survey">인터넷검색</button>
+                        <button class="btn_survey" data-rel="etc">기타</button>
+                        <input type="text">
+                    </div>
+                </div>
+            </div>
             <div class="cont_wrap">
                 <h2>도서 선택</h2>
-                <div class="book_select_box">
-                    <div class="select_info_wrap">
-                        <select name="" id="">
-                            <option value="">선택</option>
-                        </select>
-                        <div class="input_box">
-                            <button type="button" class="btn_minus"></button>
-                            <input type="text" value="10">
-                            <button type="button" class="btn_plus"></button>
-                        </div>
-                        <button type="button"><span>구입</span></button>
-                    </div>
-                    <div class="tit_box">
-                        <h3>4권 세트 할인가</h3>
-                        <span class="org_price">44,000원</span>
-                        <b class="discount_price">40,440원</b>
-                    </div>
-                </div>
+                
                 <div class="book_select_list">
-                    <div class="add_option">
-                        <b>선택 1</b>
+                    <div class="option_list">
+                        <b>초등 1학년</b>
                         <div>
-                            <p>초등 4학년 / 1세트 / 44,000원</p>
-                            <button type="button" class="btn_delete"></button>
+                            <div class="input_box">
+                                <button type="button" class="btn_minus"></button>
+                                <input type="text" value="10">
+                                <button type="button" class="btn_plus"></button>
+                            </div>
+                            <input type="text" value="0">
+                            <span>원</span>
                         </div>
                     </div>
-                    <div class="add_option">
-                        <b>선택 2</b>
+                    <div class="option_list">
+                        <b>초등 2학년</b>
                         <div>
-                            <p>초등 1학년 / 10세트 / 440,000원</p>
-                            <button type="button" class="btn_delete"></button>
+                            <div class="input_box">
+                                <button type="button" class="btn_minus"></button>
+                                <input type="text" value="10">
+                                <button type="button" class="btn_plus"></button>
+                            </div>
+                            <input type="text" value="0">
+                            <span>원</span>
                         </div>
                     </div>
-                </div>
-                <div class="total_price">
-                    <b>합계금액</b>
-                    <div>448,000원</div>
-                </div>
+                    <div class="option_list">
+                        <b>초등 3학년</b>
+                        <div>
+                            <div class="input_box">
+                                <button type="button" class="btn_minus"></button>
+                                <input type="text" value="10">
+                                <button type="button" class="btn_plus"></button>
+                            </div>
+                            <input type="text" value="0">
+                            <span>원</span>
+                        </div>
+                    </div>
+                    <div class="option_list">
+                        <b>초등 4학년</b>
+                        <div>
+                            <div class="input_box">
+                                <button type="button" class="btn_minus"></button>
+                                <input type="text" value="10">
+                                <button type="button" class="btn_plus"></button>
+                            </div>
+                            <input type="text" value="0">
+                            <span>원</span>
+                        </div>
+                    </div>
+                    <div class="option_list">
+                        <b>초등 5학년</b>
+                        <div>
+                            <div class="input_box">
+                                <button type="button" class="btn_minus"></button>
+                                <input type="text" value="10">
+                                <button type="button" class="btn_plus"></button>
+                            </div>
+                            <input type="text" value="0">
+                            <span>원</span>
+                        </div>
+                    </div>
+                    <div class="option_list">
+                        <b>초등 6학년</b>
+                        <div>
+                            <div class="input_box">
+                                <button type="button" class="btn_minus"></button>
+                                <input type="text" value="10">
+                                <button type="button" class="btn_plus"></button>
+                            </div>
+                            <input type="text" value="44,000">
+                            <span>원</span>
+                        </div>
+                    </div>
+                    <div class="option_list">
+                        <b>중학생</b>
+                        <div>
+                            <div class="input_box">
+                                <button type="button" class="btn_minus"></button>
+                                <input type="text" value="10">
+                                <button type="button" class="btn_plus"></button>
+                            </div>
+                            <input type="text" value="0">
+                            <span>원</span>
+                        </div>
+                    </div>
+                    <div class="total_price">
+                        <b>합계금액</b>
+                        <div><input type="text" value="448,000"> <span>원</span></div>
+                    </div>
+                </div>                
             </div>
 
             <div class="cont_wrap">
