--- a/cs/faq.html
+++ b/cs/faq.html
@@ -102,9 +102,9 @@
                 </div>
 
                 <ul class="faq_list">
-                    <li class="open">
+                    <li class="">
                         <div class="question">
-                            <p>대회 필독서를 구입해야 참가할 수 있나요?</p>   
+                            <p>대회 필독서를 구입해야 참가할 수 있나요?대회 필독서를 구입해야 참가할 수 있나요?대회 필독서를 구입해야 참가할 수 있나요?대회 필독서를 구입해야 참가할 수 있나요?</p>   
                         </div>
                         <div class="answer">
                             <p>도서는 꼭 구입하지 않아도 참가신청이 가능합니다.</p>
