--- a/main/main.html
+++ b/main/main.html
@@ -80,7 +80,7 @@
     </nav>
     
     <main class="main">
-        <section class="main_cont">
+        <section class="main_cont" id="main_cont">
             <div class="swiper-container main_banner">
                 <div class="swiper-wrapper">
                     <div class="swiper-slide" style="background-color: #CDD0C1;">
