--- a/member/provision.html
+++ b/member/provision.html
@@ -232,7 +232,7 @@
                 <p class="mb">[시행일] 본 약관은 2022년 4월 18일부터 적용됩니다.</p>
                 <ul class="dot_list">
                     <li>최초 공고일 : 2015년 3월 1일</li>
-                    <li>변경 공고일 : 2021년 3월 1일 (<a href="#a">이전 방침 보기</a>)</li>
+                    <li>변경 공고일 : 2021년 3월 1일 <a href="#a">(이전 방침 보기)</a></li>
                     <li>변경 공고일 : 2022년 4월 4일</li>
                 </ul>
             </article>
