--- a/myinfo/formview_p.html
+++ b/myinfo/formview_p.html
@@ -24,7 +24,7 @@
         <section class="myinfo form">
             <div class="cont_wrap">
                 <h2>응시자 정보</h2>
-                <p class="info_txt pos">∙<span>응시부문, 생년월일</span> 정보 확인 중요. 오류 시 전화로 연락주세요.</p>
+                <p class="info_txt pos"><span>응시부문, 생년월일</span> 정보 확인 중요. 오류 시 전화로 연락주세요.</p>
                 <table class="tbl_p">
                     <colgroup>
                         <col style="width: 140px;">
@@ -114,14 +114,17 @@
                         <b>대회 홈페이지 접속</b>
                         <p>www.독서올림피아드.kr</p>
                     </li>
+                    <li class="img"><img src="../assets/img/ico_arrow_online.svg" alt=""></li>
                     <li>
                         <b>배너 클릭</b>
                         <p><온라인 시험장 접속></p>
                     </li>
+                    <li class="img"><img src="../assets/img/ico_arrow_online.svg" alt=""></li>
                     <li>
                         <b>로그인</b>
                         <p><em>ID</em> : 응시번호 / <em>PW</em> : 생년월일</p>
                     </li>
+                    <li class="img"><img src="../assets/img/ico_arrow_online.svg" alt=""></li>
                     <li>
                         <span>사전테스트 <br>및 시험 응시</span>
                     </li>
@@ -134,9 +137,6 @@
         </section>
     </main>
 </div>
-
-<button class="btn __top"></button>
-
 
 <script defer src="../assets/js/jquery-3.4.1.min.js"></script>
 <script defer src="../assets/libs/swiper.min.js"></script>
