--- a/result/evaluation_p.html
+++ b/result/evaluation_p.html
@@ -17,7 +17,7 @@
 <div class="bg_dimmed"></div>
 
 <div id="wrap">
-    <main class="main">
+    <main class="main _print">
         <div class="capture" style="overflow: auto; height: 100%;">
             <h1 class="form_tit">
                 제30회 독서올림피아드 평가 결과
@@ -326,7 +326,6 @@
                 </a>
             </section>            
         </div>
-        <a href="#a" class="btn_save m_f"><span>저장하기</span></a>
     </main>
 </div>
 
