--- a/main/main.html
+++ b/main/main.html
@@ -231,10 +231,15 @@
     <div class="side_header">
         <p class="tit">안녕하세요, 한우리입니다.</p>
 		
-        <ul class="quick_menu_list"><!-- login 전 -->
+        <ul class="quick_menu_list __before"><!-- login 전 -->
             <li><a href="#a"><span>로그인</span></a></li>
             <li><a href="#a"><span>회원가입</span></a></li>
             <li><a href="#a"><span>아이디/비번찾기</span></a></li>
+        </ul>
+        <ul class="quick_menu_list __after"><!-- login 전 -->
+            <li><a href="#a"><span>로그아웃</span></a></li>
+            <li><a href="#a"><span>도서주문내역</span></a></li>
+            <li><a href="#a"><span>접수확인</span></a></li>
         </ul>
     </div>
     <nav>
