--- a/myinfo/formview_p.html
+++ b/myinfo/formview_p.html
@@ -129,6 +129,9 @@
                         <span>사전테스트 <br>및 시험 응시</span>
                     </li>
                 </ol>
+                <a href="#a" class="btn_app orange">
+                    <span class="right">인쇄하기</span>
+                </a>
             </div>
             
             <div class="myinfo_foot">
