--- a/work.html
+++ b/work.html
@@ -70,21 +70,21 @@ select{ position:absolute; left:400px; top:15px; font-size:20px; width:400px; }
 					<td>대회안내</td>
 					<td>대회개요</td>
 					<td><a href="contest/attention.html" target="_blank">contest/attention.html</a></td>
-					<td class="ac"></td>
+					<td class="ac">2022-04-04</td>
 					<td class="ac"></td>
 				</tr>
 				<tr class="m02">
 					<td></td>
 					<td>유의사항</td>
 					<td><a href="contest/info.html" target="_blank">contest/info.html</a></td>
-					<td class="ac"></td>
+					<td class="ac">2022-04-04</td>
 					<td class="ac"></td>
 				</tr>
 				<tr class="m02">
 					<td></td>
 					<td>예시문제</td>
 					<td><a href="contest/sample.html" target="_blank">contest/sample.html</a></td>
-					<td class="ac"></td>
+					<td class="ac">2022-04-04</td>
 					<td class="ac"></td>
 				</tr>
 							
