인사말,설립목적 완료

--- a/work.html
+++ b/work.html
@@ -326,29 +326,29 @@ select{ position:absolute; left:400px; top:15px; font-size:20px; width:400px; }
 				<tr class="m09">
 					<td>한우리소개</td>
 					<td>인사말</td>
-					<td><a href="hanuri/greeting.html" target="_blank">greeting</a></td>
-					<td class="ac"></td>
+					<td><a href="hanuri/greeting.html" target="_blank">hanuri/greeting</a></td>
+					<td class="ac">2022-04-04</td>
 					<td class="ac"></td>
 				</tr>
 				<tr class="m09">
 					<td></td>
 					<td>설립목적</td>
-					<td><a href="hanuri/purpose.html" target="_blank">purpose.html</a></td>
-					<td class="ac"></td>
+					<td><a href="hanuri/purpose.html" target="_blank">hanuri/purpose.html</a></td>
+					<td class="ac">2022-04-04</td>
 					<td class="ac"></td>
 				</tr>
 				<tr class="m09">
 					<td></td>
 					<td>연혁</td>
-					<td><a href="hanuri/history.html" target="_blank">history</a></td>
-					<td class="ac"></td>
+					<td><a href="hanuri/history.html" target="_blank">hanuri/history.html</a></td>
+					<td class="ac">2022-04-04</td>
 					<td class="ac"></td>
 				</tr>
 				<tr class="m09">
 					<td></td>
 					<td>위치안내</td>
-					<td><a href="hanuri/location.html" target="_blank">location.html</a></td>
-					<td class="ac"></td>
+					<td><a href="hanuri/location.html" target="_blank">hanuri/location.html</a></td>
+					<td class="ac">2022-04-04</td>
 					<td class="ac"></td>
 				</tr>
 				</tbody>
