--- a/hanuri/location.html
+++ b/hanuri/location.html
@@ -81,7 +81,7 @@
     
     <main class="main">
         <div class="tit">
-            <h1>설립목적</h1>
+            <h1>위치안내</h1>
         </div>
         <section class="hanuri" id="hanuri_location">
             <div class="location">
