--- a/contest/info.html
+++ b/contest/info.html
@@ -95,7 +95,7 @@
             </div>
             <div class="cont_wrap">
                 <h2>시험안내</h2>
-                <ul class="text_list">
+                <ul class="text_list justfy">
                     <li><b>시험 기반</b> : <span>온라인 시험</span></li>
                     <li><b>참가 부문</b> : <span>초등학생부(학년별), 중학생부</span></li>
                     <li><b>필  독  서</b> : <span>초등학생부 4권, 중학생부 3권</span></li>
@@ -107,7 +107,7 @@
             </div>
             <div class="cont_wrap">
                 <h2>2022년 일정 안내</h2>
-                <ul class="text_list half">
+                <ul class="text_list justfy half">
                     <li><b>접수 기간</b> : 6.13(월) ~ 7.15(금)</li>
                     <li><b>시  험 일</b> : <strong>8.20(토)</strong></li>
                     <li><b>문제 공개</b> : 8.24(수)</li>
