--- a/hanuri/history.html
+++ b/hanuri/history.html
@@ -49,14 +49,14 @@
                 <li>
                     <a href="#a" data-rel="result">결과발표</a>
                 </li>
-                <li class="pc">
+                <li class="pc_menu">
                     <a href="#a" data-rel="customer">고객센터</a>
                     <div class="sub_nav">
                         <a href="#a" data-rel="notice">공지사항</a>
                         <a href="#a" data-rel="faq">자주묻는 질문</a>
                     </div>
                 </li>
-                <li class="pc">
+                <li class="pc_menu">
                     <a href="#a" data-rel="hanuri">한우리소개</a>
                     <div class="sub_nav">
                         <a href="#a" data-rel="greeting">인사말</a>
